2.practice/2-3.service/ingress/nginx19-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-9
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx1-9
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-9-deployment
spec:
  replicas: 2
  selector:       # Label Selector，必须匹配 Pod 模板中的标签
    matchLabels:
      app: nginx1-9
  template:
    metadata:
      labels:
        app: nginx1-9
    spec:
      containers:
        - name: nginx
          image: nginx:1.9.1
          ports:
            - containerPort: 80
