2.practice/2-3.service/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.my.com
      http:
        paths:
          - pathType: Prefix
            path: "/v17"
            backend:
              service:
                name: nginx1-7
                port:
                  number: 80
          - pathType: Prefix
            path: "/v19"
            backend:
              service:
                name: nginx1-9
                port:
                  number: 80
